# ISO26262SystemC

./: CMakeLists.txt  plots.py  sc_fta.h  sc_hw_metrics.h
examples/: dram-example.cpp  dram-fta-example.cpp  dram-metrics-example.cpp  dram-metrics-refactored.cpp
tests/: tests.cpp
